fixed context-menu on mobile for real this time

--- a/app/css/grid.css
+++ b/app/css/grid.css
@@ -5,6 +5,12 @@
   padding-right: .18em;
 	position: relative;
 }
+.dragIcon {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	opacity: 0.2;
+}
 
 .gridItem {
   overflow: hidden;
